tests/errors/sem_too_few_fun_args.kt
fun add(a: Int, b: Int): Int {
    return a + b
}

fun main() {
    add(5)
}
